@@ -30,7 +30,7 @@ Build-Depends: autotools-dev,
                libgstreamer1.0-dev (>= 0.11.92),
                libgtk-3-dev (>= 3.16),
                libibus-1.0-dev,
-               libmutter-dev (>= 3.20.2),
+               libmutter-dev (>= 3.20.3-1~),
                libnm-glib-dev (>= 0.9.8) [linux-any],
                libnm-glib-vpn-dev (>= 0.9.8) [linux-any],
                libnm-gtk-dev (>= 0.9.8) [linux-any],
@@ -71,7 +71,7 @@ Depends: ${gir:Depends},
          gir1.2-gtk-3.0 (>= 3.16),
          gir1.2-gweather-3.0,
          gir1.2-ibus-1.0 (>= 1.5.2),
-         gir1.2-mutter-3.0 (>= 3.20.2),
+         gir1.2-mutter-3.0 (>= 3.20.3-1~),
          gir1.2-networkmanager-1.0 [linux-any],
          gir1.2-nmgtk-1.0 (>= 0.9.8) [linux-any],
          gir1.2-pango-1.0,
@@ -85,7 +85,7 @@ Depends: ${gir:Depends},
          gnome-shell-common (= ${source:Version}),
          gnome-backgrounds (>= 3.13.90),
          gsettings-desktop-schemas (>= 3.19.2),
-         mutter (>= 3.20.2),
+         mutter (>= 3.20.3-1~),
          python3,
          telepathy-mission-control-5,
 Recommends: gkbd-capplet,
